<resources>
    <string name="app_name">DontBreakTheChain</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="g_n">Gün</string>
    <string name="kalan_saat">Kalan Saat</string>
    <string name="zinciri_kirma">Zinciri Kırma</string>
    <string name="hedefe_kalan_gun">Hedefe Kalan Gün</string>
    <string name="zincir_takvimi">Zincir Takvimi</string>
    <string name="tebrik">Tebrikler!</string>
    <string name="sentence">Buraya Tıkla!</string>
    <string name="first_sentence">\"Taşı delen suyun kuvveti değil, damlaların sürekliliğidir.\"</string>
    <string name="second_sentence">\"Büyük sonuçlar, küçük sürekli çabaların birikimidir.\"</string>
    <string name="third_sentence">\"Bir işe başlamak kolaydır; devam etmek ise çok zordur.\"</string>
    <string name="fourth_sentence">\"Yalnızca devam ve kararlılık her şeyi yapabilecek güce sahiptir.\"</string>
    <string name="fifth_sentence">\"İnsan sahip olduklarının toplamı değil, fakat henüz gerçekleştiremediklerinin toplamıdır.\"</string>
    <string name="sixth_sentence">\"Başarı bir yolculuktur, bir varış noktası değil.\"</string>
    <string name="seventh_sentence">\"Baş+arı: “Baş” olmak için “arı” gibi çalışmak gerekir.\"</string>
    <string name="eight_sentence">\"Devamlılık, sadece bir rutini sürdürmek değil, aynı zamanda bu rutini anlamaktır.\"</string>
    <string name="nineth_sentence">\"Başarı, sürekli çaba ve azimle yakalanır.\"</string>
    <string name="tenth_sentence">\"Başarının yolu, konuşmayı bırakmak ve yapmaya başlamaktır.\"</string>
    <string name="eleventh_sentence">\"Devler gibi eseler bırakmak için, karıncalar gibi çalışmak lazım.\"</string>
    <string name="tewelveth_sentence">\"Bahane değil, çare bulun.\"</string>
    <string name="therteenth_sentence">\"Aradığını bilmeyen, bulduğunu anlayamaz.\"</string>
    <string name="fourtheenth_sentence">\"Ders alınmış başarısızlık başarı demektir.\"</string>
    <string name="fifteenth_sentence">\"Fırsatlar durup dururken karşınıza çıkmaz, onları siz yaratırsınız.\"</string>
    <string name="sixteenth_sentence">\"Hiçbir şeyden vazgeçme, çünkü sadece kaybedenler vazgeçer.\"</string>
    <string name="seventeenth_sentence">\"Bundan bir yıl sonra, bugün başlamış olmayı dileyeceksin.\"</string>
    <string name="eighteenth_sentence">\"Durmadan devam ettiğin sürece, ne kadar yavaş gittiğinin bir önemi yoktur.\"</string>
    <string name="nineteenth_sentence">\"Kaybetmekten yılmayan, kazanmanın eşiğindedir.\"</string>
    <string name="twentyth_sentence">\"Hiçbir zaman vazgeçmeyen bir insanı yenmek çok zordur.\"</string>
    <string name="twentyoneth_sentence">\"Dünya, vazgeçenleri değil, azmedenleri hatırlar.\"</string>
    <string name="twentytwoth_sentence">\"Gökkuşağına ulaşmak istiyorsan yağmura katlanmak zorundasın.\"</string>
    <string name="twentythreeth_sentence">\"İnsan sahip olduklarının toplamı değil, fakat henüz gerçekleştiremediklerinin toplamıdır.\"</string>
    <string name="twentytfourth_sentence">\"Eğer ortasında vazgeçerseniz, sonunu asla göremezsiniz.\"</string>
    <string name="twentyfiftyth_sentence">\"Yarışı kazananlar, daima yavaş ve devamlı gidenlerdir.\"</string>
    <string name="zincir_ekleme">Zincir Ekleme</string>
    <string name="yeni_bir_hedef_ekle">Yeni Bir Hedef Ekle</string>
    <string name="hedef_ekle">Hedef:\n(Örneğin: Su İç)</string>
    <string name="rutin_ekle">Rutin:\n(Örneğin: Günde 2 Litre)</string>
    <string name="kaydet">Kaydet</string>
    <string name="sil">Sil</string>
    <string name="hedef_rutin">Hedef ve Rutin Boş Kalamaz!</string>
    <string name="kaydedildi">Kaydedildi!</string>
    <string name="karakter">Hedef, 25 Karakterden Büyük Olamaz!</string>
    <string name="silindi">Silindi!</string>
    <string name="zincirler">Zincirler</string>
    <string name="hosgeldiniz">Hoşgeldiniz</string>
    <string name="magaza">Mağaza</string>
    <string name="puan_ver">Puan Ver</string>
    <string name="girisyap">Giriş Yap</string>
    <string name="kayitol">Kayıt Ol</string>
    <string name="destekol">Uygulama Geliştiriciye Destek Ol!</string>
    <string name="ode">Öde</string>
    <string name="diger_tutar">Diğer Tutar:</string>
    <string name="zinciri_kirma2">Zinciri Kırma</string>
    <string name="cokyakinda1">Çok Yakında...</string>
    <string name="cokyakinda2">Çok Yakında...</string>
    <string name="cokyakinda3">Çok Yakında...</string>
    <string name="readme">Başlamadan Önce \n\nMerhaba. Öncelikle uzun ve zorlu, ancak hayatını değiştirecek bir sürece başlamak üzeresin. Kısaca kendimden bahsetmem gerekirse, ben Ali. Bu uygulamanın geliştiricisiyim ve aynı zamanda bir üniversitede Yazılım Mühendisliği öğrencisiyim. \n\nBundan 8 ay önce, arkadaşımla birlikte Zinciri Kırma\'ya başlama kararı aldık. Aradan 4-5 ay geçtikten sonra \"Kaç gün oldu başlayalı?\" soruları sormaya başladık. Her bu soruyu sorduğumuzda, başladığımız günden itibaren geçen günleri saymamız gerekiyordu ve bu çok zaman alıyordu. Ben de çok basit, tek sayfadan oluşan, sadece gün sayacı olan bir mobil uygulama yapmaya karar verdim, işimizi kolaylaştırmak için. Sonrasında olaylar gelişti ve şu an bu uygulamadayız.\n\nÖncelikle, Zinciri Kırma nedir? Zinciri Kırma; kendinize katmak istediğiniz alışkanlık veya başarmak istediğiniz bir hedefi, belirlediğiniz periyotta 1 yıl boyunca bir periyot bile aksatmadan yapmanız gereken bir metodolojidir. Bu süreç de doğal olarak zincire benzetilir. Eğer zincirin bir halkası dahi koparsa, tüm zincir kırılmış olur. Örneğin benim zincirim her gün bir adet mobil uygulama geliştirme videosu izlemekti. Seninki haftada 2 gün spora gitmek olabilir.\n\nŞundan emin olabilirsin; bundan 6 ay sonra ne kadar yol kat ettiğine gerçekten çok şaşıracaksın. Benim 8 ayda geldiğim nokta, senin için gerçekçi bir örnek ve ilham kaynağı olabilir. Bundan 8 ay önce biri bana \"8 ay sonra bir mobil uygulama yapacaksın ve Google Play\'e koyacaksın\" dese, en kibar tabiriyle \"Hadi canım sen de\" derdim. Biz şimdiden arkadaşımla gelecek yılki hedefimizin ne olacağını tartışıp heyecanlanmaya başladık bile. \n\n6 ay, 1 yıl gibi süreler sana çok uzun gelebilir, ancak gerçek gelişim genellikle küçük adımlarla olur. Çok hızlı bir şekilde parayı bulanların hep batış, çakılma hikayelerini dinleriz. Çok hızlı bir şekilde ünlü olanları da ne kadar hızlı unuttuğumuzu sosyal medyadan fark etmişsindir. Ya da daha kötüsü, çok hızlı bir şekilde doğal olmayan süreçlerle elde edilen şeyler sonucunda eskisinden daha da kötü hayatı olanların sayısı hiç az değil.\n\nGerçek başarı, yavaş yavaş, sindire sindire, zorlu ve meşakkatli bir yoldan geçer. Sosyal medyada bize yansıtılanlar neredeyse tamamen yalandan ibarettir. Burada sabır, kararlılık ve devamlılık çok kritiktir. Bu öyle bir yol ki kendini geliştirdikçe çevren ve dünya da bundan etkilenecek, şu anda benim mobil uygulamamın sana faydalı olacak olması gibi. Sonuçta ne demiş şair: \"Kendini değiştir, dünya değişsin. Dünyanı değiştir, dünya değişsin.\"\n\nUygulamaya gelecek olursak, bir zincir/hedef oluştur ve ana sayfada bu zinciri seç. Zinciri seçtikten sonra zincirine başlayalı kaç gün olduğunu, 1 yılın bitmesine kaç gün kaldığını ve bugünün bitmesine kaç saat kaldığını ana sayfadan görebilirsin. Ayrıca, zincirinle bağlantılı olan dijital takviminden ilerlemeni görsel olarak görebilir ve motive olabilirsin (Takvimin yeşillendikçe daha da güçlü hissedeceksin). Her gün takvime gir ve o günkü zincirini tamamlayınca o günü onayla. Unutursam diye endişelenme, her gün sana bildirim yollayacağım.\n\nBu süreçte sana bol şans ve kararlılık diliyorum.</string>
    <string name="zinciri_kirma_name">Zinciri Kırma</string>
    <string name="gecen_gun">Geçen Gün: </string>
    <string name="bildirim">Hey! Zincirini Unutma!</string>

</resources>